# AgePredicting

./: .gitignore  README.md
cpp/: CMakeLists.txt  cnn_demo.cpp  error_nn.cpp  kernel_pca_demo.cpp  parser.cpp  pca_demo.cpp  prepare_data.cpp  regression_cnn_demo.cpp  run_ksvm.cpp  run_lsvm.cpp  run_nn.cpp  run_regression_nn.cpp  run_ridge.cpp  svm.cpp  svm_demo.cpp
cpp/cnn/: CNN.cpp  CNN.hpp  Layer.hpp  RegressionCNN.cpp  RegressionCNN.hpp
cpp/cnn/layers/: AveragePoolingLayer.cpp  AveragePoolingLayer.hpp  ConvolutionalLayer.cpp  ConvolutionalLayer.hpp  FullConnectedLayer.cpp  FullConnectedLayer.hpp  MaxPoolingLayer.cpp  MaxPoolingLayer.hpp  ReLuLayer.cpp  ReLuLayer.hpp  ReshapeLayer.cpp  ReshapeLayer.hpp  SigmoidLayer.cpp  SigmoidLayer.hpp
cpp/model/: Model.cpp  Model.hpp
cpp/ridge/: KernelRidgeRegression.cpp  KernelRidgeRegression.hpp  RidgeRegression.cpp  RidgeRegression.hpp
cpp/svm/: KernelSVM.cpp  KernelSVM.hpp  LinearSVM.cpp  LinearSVM.hpp  MultiClassKernelSVM.cpp  MultiClassKernelSVM.hpp  MultiClassLinearSVM.cpp  MultiClassLinearSVM.hpp
cpp/utils/: KernelPCA.cpp  KernelPCA.hpp  PCA.cpp  PCA.hpp  Utils.cpp  Utils.hpp
data/: .gitignore  dataset
demo/: .gitignore  pca.data  pca_v.data  plot_error.py  plot_pca.py
